2007-01-17 Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
        * src/NameDisplay.py (_format_str_base): enable new implementation

2007-01-17  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DisplayModels/_PeopleModel.py: fix MarkerType.TODO_TYPE
	* src/DataViews/_PersonView.py: Expand all nodes on interactive search

2007-01-16  Alex Roitman  <shura@gramps-project.org>
	* src/NameDisplay.py (set_name_format): Use hard-coded methods for
	the pre-set name displays formats.

2007-01-16  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: handle missing place in LDS ord
	* src/DataViews/_PersonView.py: optimization
	* src/ViewManager.py: remove double build call
	* src/DisplayModels/_PeopleModel.py: optimization

2007-01-17 Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
        * src/NameDisplay.py: fast implementation

2007-01-16 Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
        * src/Filters/_GenericFilter.py: file get_cursor funcs
	
2007-01-16  Don Allingham  <don@gramps-project.org>

	* src/DataViews/_PersonView.py (PersonView): disable cursor
	callbacks

2007-01-16  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/Editors/*: Switch notebook tabs during DnD

2007-01-15  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_PersonView.py: use watch cursor on node expand
	* src/GrampsDb/_ReadGedcom.py: handle empty repo instances
	* src/plugins/TestCaseGenerator.py: fix typo
	* src/DisplayState.py: manage watch cursors better (don't set twice)
	* src/DisplayModels/_PeopleModel.py: maintain backref hash table for quick access 
	to iter to node mappings at the top level.

2007-01-15  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/ViewManager.py: Switch pages during DnD; Set active sidebar
	button properly

2007-01-15  Don Allingham  <don@gramps-project.org>

	* src/ViewManager.py (check_for_portability_problems): simplify the
	warning message. Fix typo.
	* src/DateEdit.py: make "bad date" translatable.
